# pro-prompter

./: biome.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/fs/: browser.rs  mod.rs  reader.rs  watcher.rs  writer.rs
src-tauri/src/prompt/: manager.rs  mod.rs  storage.rs
src-tauri/src/undo/: mod.rs
src-tauri/src/workspace/: mod.rs  storage.rs
src-tauri/src/xml/: generator.rs  mod.rs  parser.rs
src/components/: file-explorer.tsx  mode-toggle.tsx  prompt-library.tsx  simple-mode.tsx  theme-provider.tsx  theme-toggle.tsx  workspace-selector.tsx  xml-mode.tsx
src/components/ui/: badge.tsx  card.tsx  resizable.tsx  scroll-area.tsx  toggle.tsx
src/hooks/: use-file-system-watcher.ts  use-file-system.ts  use-prompts.ts  use-workspace.ts  use-xml-parser.ts
src/types/: index.ts
