[package]
name = "proprompter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "proprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-fs = "2"
walkdir = "2"
ignore = "0.4"
memmap2 = "0.9.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37.2"
uuid = { version = "1.4", features = ["v4", "serde"] }
directories = "6.0.0"
anyhow = "1.0"
tokio = { version = "1.29", features = ["fs", "rt-multi-thread", "macros"] }
similar = "2.3.0"
chrono = "0.4"
notify = "7.0.0"
